# conjunction-types

./: CHANGELOG.md  CLAUDE.md  DEVELOPMENT.md  LICENSE  MANIFEST.in  README.md  _draft_impl.py  pyproject.toml  static.py
.archived/: _initial_design.py
.archived/docs/: QUICK_REFERENCE.md  README.md  SPECIFICATION_COMPLIANCE.md  TYPE_HINTS_REFERENCE.md
.archived/examples/: type_hint_verification.py
.archived/intersection_types/: __init__.py  _core.py
.archived/tests/: test_product_types.py
conjunction_types/: __init__.py  _core.py  _core.pyi  _mint.py
conjunction_types/ndjson/: __init__.py  utils.py
docs/: IMPLEMENTATION_SUMMARY.md
examples/: demo.py  type_hint_verification.py
intersection_types/: _core.py
product_types/: __init__.py  _core.py  _core.pyi
tests/: spec.py  test.py  test_conjunction.py  test_ndjson.py  test_product_types.py
