[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conjunction-types"
version = "0.1.0"
description = "Conjunction: A useful intersection/product type for Python."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Sean Brynjólfsson"}
]
keywords = [
    "types",
    "typing",
    "type-hints",
    "product-types",
    "intersection-types",
    "generic-types",
    "pep695",
    "pep747"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pyright>=1.1.380",
]

[project.urls]
Homepage = "https://github.com/jolfss/conjunction-types"
Documentation = "https://github.com/jolfss/conjunction-types/blob/main/README.md"
Repository = "https://github.com/jolfss/conjunction-types"
Issues = "https://github.com/jolfss/conjunction-types/issues"

[tool.setuptools]
packages = ["conjunction_types"]

[tool.setuptools.package-data]
product_types = ["py.typed"]

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "standard"
